--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Language" content="en-US">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>FortunePlay Fun | Nightly Social Casino Retreat</title>
-  <meta name="description" content="FortunePlay Fun is a nightly social casino retreat with curated rooms, real hosts, and zero-cash rituals that keep play mindful and bright.">
-  <meta name="keywords" content="FortunePlay Fun, bigbetzone.online, social casino, free casino lounge, mindful slots, community gaming, hosted rooms">
+  <meta name="theme-color" content="#ff4da6">
+  <title>BigBetZone.online | Neon Social Casino Boardwalk</title>
+  <meta name="description" content="BigBetZone.online is an after-dark social casino boardwalk with live hosts, neon rituals, curated playlists, and zero-cash rooms built for mindful fun.">
+  <meta name="keywords" content="BigBetZone.online, social casino boardwalk, free-to-play casino lounge, mindful slots, curated playlists, hosted rooms, responsible gaming">
   <meta name="robots" content="index, follow">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="FortunePlay Fun | Nightly Social Casino Retreat">
-  <meta property="og:description" content="Enter FortunePlay Fun for curated rooms, human hosts, nightly playlists, and responsibility-first rituals&mdash;never deposits or withdrawals.">
+  <meta property="og:site_name" content="BigBetZone.online">
+  <meta property="og:title" content="BigBetZone.online | Neon Social Casino Boardwalk">
+  <meta property="og:description" content="Step onto BigBetZone.online for curated rooms, human hosts, nightly playlists, and responsibility-first rituals&mdash;never deposits or withdrawals.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bigbetzone.online/">
   <meta property="og:image" content="https://bigbetzone.online/public/images/shareimage.webp">
-  <meta property="og:image:alt" content="FortunePlay Fun collage with teal and gold lighting">
+  <meta property="og:image:alt" content="BigBetZone.online collage with neon magenta and ultraviolet lighting">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="FortunePlay Fun | Nightly Social Casino Retreat">
-  <meta name="twitter:description" content="Social slots, cards, and playlists hosted by humans with zero cash play and built-in pauses.">
+  <meta name="twitter:title" content="BigBetZone.online | Neon Social Casino Boardwalk">
+  <meta name="twitter:description" content="Social casino rooms, curated playlists, and calm rituals hosted live on BigBetZone.online with zero cash play.">
   <meta name="twitter:image" content="https://bigbetzone.online/public/images/shareimage.webp">
   <link rel="canonical" href="https://bigbetzone.online/">
   <link rel="alternate" href="https://bigbetzone.online/" hreflang="en">
@@ -31,9 +31,9 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <div class="shell header__inner">
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
@@ -50,12 +50,12 @@
     <section class="hero hero--simple" id="overview">
       <div class="shell hero__simple">
         <div class="hero__intro">
-          <p class="pill">FortunePlay Fun</p>
-          <h1>A twilight lounge for fans of intentional social play.</h1>
-          <p>FortunePlay Fun opens four curated nights each week with live hosts, analog-style playlists, and scheduled breathers. No wallets, no withdrawals&mdash;just adults trading tactics, stories, and calm laughs between spins.</p>
+          <p class="pill">BigBetZone.online</p>
+          <h1>Spin into the neon social casino boardwalk.</h1>
+          <p>BigBetZone.online opens four live-hosted nights every week with curated playlists, improv story cues, and zero-cash rituals so adults can trade tactics, stretch breaks, and calm laughs between mindful spins.</p>
           <div class="button-row">
-            <a class="btn btn--primary" href="#experience">Enter FortunePlay Fun</a>
-            <a class="btn btn--ghost" href="/responsible-play/">See our care standards</a>
+            <a class="btn btn--primary" href="#experience">Start a night on BigBetZone.online</a>
+            <a class="btn btn--ghost" href="/responsible-play/">Review our care standards</a>
           </div>
           <div class="hero__chips" aria-label="Quick stats">
             <div class="hero__chip">
@@ -85,13 +85,13 @@
 
           <p class="pill">Origin story</p>
 
-          <h2>How the FortunePlay Fun hideout took shape.</h2>
+          <h2>How the BigBetZone.online boardwalk took shape.</h2>
 
-          <p>FortunePlay Fun was dreamed up by art directors, audio nerds, and support hosts who were over casino apps that bark orders. We wanted a lounge that feels like sliding into a favorite booth where rituals outrank rake.</p>
+          <p>BigBetZone.online was sketched by session hosts, playlist curators, and accessibility nerds who were tired of casino apps that barked orders. We pictured a neon promenade where rituals outrank rake and conversations float between mindful spins.</p>
 
-          <p>We met in borrowed studios, swapped stems, and scribbled interface notes on acetate until the layout felt like a mixtape insert. A slower flight plan emerged: modular rooms, live hosts, and transparent rituals.</p>
+          <p>Those early nights happened in midnight studios where we layered analog grain, scent notes, and playlist swaps until the layout felt like a secret boardwalk stall. A calmer cadence surfaced: modular rooms, accountable hosts, and pause cues printed right into the welcome.</p>
 
-          <p>Prototype nights turned into calibration parties. We tuned glow levels, rehearsed tone of voice, and ran accessibility passes until the space behaved like a concierge team built it.</p>
+          <p>Prototype nights became calibration parties. We tuned glow levels, rehearsed tone of voice, mapped accessibility passes, and journaled every tweak so the digital lounge would feel concierge-built.</p>
 
           <p>Every lesson landed inside a field journal, and those entries still guide each roadmap:</p>
 
@@ -151,7 +151,7 @@
 
             <p>As attendance climbed we trained moderators like concierge hosts&mdash;attentive, grounded, never loud. We rehearse greetings, resets, and exit rituals so every interaction feels deliberate.</p>
 
-            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across FortunePlay Fun.</p>
+            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across BigBetZone.online.</p>
 
           </div>
 
@@ -193,7 +193,7 @@
 
           </ul>
 
-          <p>We still raise a toast to those original eight players whenever a new room opens. They proved FortunePlay Fun could stay generous, transparent, and real.</p>
+          <p>We still raise a toast to those original eight players whenever a new room opens. They proved BigBetZone.online could stay generous, transparent, and real.</p>
 
         </div>
 
@@ -209,13 +209,13 @@
 
           <p class="pill">How we play</p>
 
-          <h2>Free access, social energy, adults only.</h2>
+          <h2>Free access, neon energy, adults only.</h2>
 
-          <p>FortunePlay Fun is for lounge fans who crave playlists and conversation more than flashing jackpots. We show up for rituals, not rush.</p>
+          <p>BigBetZone.online is for adults who crave playlists, conversation cues, and social casino rituals more than flashing jackpot meters. We show up for mindfulness and story swaps, not rush.</p>
 
-          <p>Keeping entry free removes hesitation. Centering community invites story swaps. Keeping it 18+ lets every host lean into frank pacing cues and wellbeing check-ins.</p>
+          <p>Keeping entry free removes hesitation, while centering community invites nightly mixtapes and candid pacing cues. Keeping it 18+ means every host can lean into wellbeing check-ins without tiptoeing.</p>
 
-          <p>Each session starts with a vibe check, a playlist spotlight, and a reminder that breathing breaks matter as much as streaks.</p>
+          <p>Sessions open with a vibe check, a neon playlist spotlight, and a reminder that breathing breaks matter just as much as streaks so the room settles before we spin.</p>
 
         </div>
 
@@ -225,9 +225,9 @@
 
             <h3>Free by design</h3>
 
-            <p>There is no store and no checkout flow. Chips, frames, and glows refresh on a shared cadence so nobody can buy their way to status.</p>
+            <p>There is no store or checkout flow on BigBetZone.online. Chips, frames, and glows refresh on a shared cadence so nobody can buy their way into prestige.</p>
 
-            <p>Rotating rewards feel like gallery exhibits&mdash;frequent enough to stay fresh, intentional enough to feel meaningful. Everyone resets together when the season flips.</p>
+            <p>Rotating rewards feel like boardwalk exhibits&mdash;frequent enough to stay fresh, intentional enough to feel meaningful. Everyone resets together when the season flips.</p>
 
           </article>
 
@@ -235,9 +235,9 @@
 
             <h3>Community heartbeat</h3>
 
-            <p>We host nightly huddles, keep chat thoughtful, and spotlight member-built playlists. If the energy dips, a real moderator answers within minutes.</p>
+            <p>We host nightly huddles, keep chat thoughtful, and spotlight member-built playlists that feel tailor-made for a seaside walk. If the energy dips, a real moderator answers within minutes.</p>
 
-            <p>Tuesdays bring album drops, Thursdays spark poker banter, and Sundays end with soft resets where we recap highlights so nobody feels left out.</p>
+            <p>Tuesdays bring album drops, Thursdays spark poker banter, and Sundays end with soft resets where we recap highlights so nobody feels left out of the BigBetZone.online story.</p>
 
           </article>
 
@@ -245,9 +245,9 @@
 
             <h3>Adults-only lounge</h3>
 
-            <p>Age is verified during onboarding and supported with gentle pacing reminders once you are in. Hosts encourage pauses, hydration, and breaks without shame.</p>
+            <p>Age is verified during onboarding and supported with gentle pacing reminders once you are in. Hosts encourage pauses, hydration, and breaks without shame, keeping social casino time grounded.</p>
 
-            <p>New arrivals see optional quiet hours, calm prompts, and direct links to care resources whenever stress sneaks in.</p>
+            <p>New arrivals see optional quiet hours, calm prompts, and direct links to care resources whenever stress sneaks in or the boardwalk feels loud.</p>
 
           </article>
 
@@ -255,9 +255,9 @@
 
             <h3>Shared rituals</h3>
 
-            <p>We toast when someone returns from a break, run collaborative quests that unlock frames for entire rooms, and host "pass the aux" rounds where members set the soundtrack.</p>
+            <p>We toast when someone returns from a break, run collaborative quests that unlock frames for entire rooms, and host "pass the aux" rounds where members set that night's neon soundtrack.</p>
 
-            <p>Moderators capture highlights and publish a nightly lounge brief so even if you missed a session you still feel folded into the story.</p>
+            <p>Moderators capture highlights and publish a nightly lounge brief so even if you missed a session you still feel folded into BigBetZone.online's evolving boardwalk lore.</p>
 
           </article>
 
@@ -265,9 +265,9 @@
 
             <h3>House cues</h3>
 
-            <p>Etiquette boards remind everyone to cheer generously, keep chat kind, respect pauses, and celebrate streaks without pressure.</p>
+            <p>Etiquette boards remind everyone to cheer generously, keep chat kind, respect pauses, and celebrate streaks without pressure so the social casino energy stays relaxed.</p>
 
-            <p>The vibe depends on shared cues, so we teach them like a host pointing out where snacks live, how long the music plays, and when to dim the lights.</p>
+            <p>The vibe depends on shared cues, so we teach them like a host pointing out where snacks live, how long the playlist floats, and when to dim the lights.</p>
 
           </article>
 
@@ -287,9 +287,9 @@
 
           <h2>Lounge ambiance, studio discipline.</h2>
 
-          <p>Spatial rhythm, letterforms, and gradients are tuned the way we tune a physical lounge. The interface should feel effortless so the night can feel restful.</p>
+          <p>Spatial rhythm, letterforms, and gradients are tuned the way we tune the real BigBetZone.online boardwalk lounge. The interface should feel effortless so the night can feel restful.</p>
 
-          <p>We map every page like a boutique venue&mdash;cushioned corners, clear sight lines, and breathing room so you always know where you are. Moderation follows a studio call sheet with calm hosts and respectful prompts.</p>
+          <p>We map every page like a boutique venue&mdash;cushioned corners, clear sight lines, and breathing room so you always know which social casino room you're in. Moderation follows a studio call sheet with calm hosts and respectful prompts.</p>
 
         </div>
 
@@ -471,7 +471,7 @@
 
           <h2>Respect is the jackpot.</h2>
 
-          <p>FortunePlay Fun only works when the lounge feels like a trusted crew unwinding after long days. Everyone in the room is a co-pilot, not a handle to chase.</p>
+          <p>BigBetZone.online only works when the lounge feels like a trusted crew unwinding after long days. Everyone in the room is a co-pilot, not a handle to chase.</p>
 
           <p>Moderators, tooling, and support docs are tuned like a studio session&mdash;clear roles, soft cues, and responsive care. We refine the playbook nightly with player feedback.</p>
 
@@ -531,13 +531,13 @@
 
         </div>
 
-        <div class="callout" style="margin-top:2.5rem;">
+      <div class="callout" style="margin-top:2.5rem;">
 
           <h3>Responsible play is built in.</h3>
 
-          <p>Visit the <a href="/responsible-play/">Responsible Play Center</a> to pause your account, set limits, or find resources. The desk is staffed by people who would rather help you take a breather than chase one more spin.</p>
+          <p>Visit the <a href="/responsible-play/">Responsible Play Center</a> to pause your account, set limits, or find resources. It is the heartbeat of the BigBetZone.online social casino boardwalk, staffed by people who would rather help you breathe than chase one more spin.</p>
 
-          <p>Hosts shout pacing cues during sessions, check in privately if you seem off, and celebrate breaks the same way they celebrate streaks.</p>
+          <p>Hosts shout pacing cues during sessions, check in privately if you seem off, and celebrate breaks the same way they celebrate streaks so the neon stays fun, not frantic.</p>
 
           <ul class="checklist" aria-label="Responsible play rituals">
 
@@ -569,7 +569,7 @@
 
           <div class="button-row">
 
-            <a class="btn btn--soft" href="/how-it-works/">See how FortunePlay works</a>
+            <a class="btn btn--soft" href="/how-it-works/">See how BigBetZone.online works</a>
 
             <a class="btn btn--primary" href="/contact/">Talk to a host</a>
 
@@ -588,12 +588,12 @@
   <footer class="footer">
     <div class="shell footer__grid">
       <div>
-        <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                  <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+        <a class="brand" href="/" aria-label="BigBetZone.online home">
+                  <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
         </a>
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>BigBetZone.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
