--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Accessibility Statement | FortunePlay Fun</title>
-  <meta name="description" content="Explore how FortunePlay Fun keeps the lounge accessible with WCAG 2.1 AA practices, predictable layouts, and quick human support.">
+  <meta name="theme-color" content="#ff4da6">
+  <title>Accessibility Statement | BigBetZone.online</title>
+  <meta name="description" content="Explore how BigBetZone.online keeps the lounge accessible with WCAG 2.1 AA practices, predictable layouts, and quick human support.">
   <link rel="canonical" href="https://bigbetzone.online/accessibility/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Accessibility Statement | FortunePlay Fun">
-  <meta property="og:description" content="We design FortunePlay Fun with predictable navigation, high-contrast palettes, semantic HTML, and real humans for support.">
+  <meta property="og:site_name" content="BigBetZone.online">
+  <meta property="og:title" content="Accessibility Statement | BigBetZone.online">
+  <meta property="og:description" content="We design BigBetZone.online with predictable navigation, high-contrast palettes, semantic HTML, and real humans for support.">
   <meta property="og:url" content="https://bigbetzone.online/accessibility/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://bigbetzone.online/public/images/shareimage.webp">
-  <meta property="og:image:alt" content="FortunePlay Fun share card">
+  <meta property="og:image:alt" content="BigBetZone.online share card">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Accessibility Statement | FortunePlay Fun">
-  <meta name="twitter:description" content="Accessibility and respect guide every update in the FortunePlay Fun lounge.">
+  <meta name="twitter:title" content="Accessibility Statement | BigBetZone.online">
+  <meta name="twitter:description" content="Accessibility and respect guide every update in the BigBetZone.online lounge.">
   <meta name="twitter:image" content="https://bigbetzone.online/public/images/shareimage.webp">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
@@ -27,9 +27,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
@@ -47,8 +47,8 @@
       <div class="shell hero__grid">
         <div>
           <p class="pill">Accessibility</p>
-          <h1>Building FortunePlay Fun for every body and device.</h1>
-          <p>Static HTML, generous spacing, and predictable layouts keep FortunePlay Fun friendly to screen readers, switch devices, and focus work.</p>
+          <h1>Building BigBetZone.online for every body and device.</h1>
+          <p>Static HTML, generous spacing, and predictable layouts keep BigBetZone.online friendly to screen readers, switch devices, and focus work.</p>
         </div>
         <div class="hero__card">
           <h3>What guides our audits</h3>
@@ -95,13 +95,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>BigBetZone.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
