--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Cookie Policy | FortunePlay Fun</title>
-  <meta name="description" content="Understand how FortunePlay Fun uses cookies, storage, and analytics, and how to manage your preferences.">
+  <meta name="theme-color" content="#ff4da6">
+  <title>Cookie Policy | BigBetZone.online</title>
+  <meta name="description" content="Understand how BigBetZone.online uses cookies, storage, and analytics, and how to manage your preferences.">
   <link rel="canonical" href="https://bigbetzone.online/cookie-policy/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Cookie Policy | FortunePlay Fun">
-  <meta property="og:description" content="Breakdown of essential, analytics, and personalization cookies for the FortunePlay lounge.">
+  <meta property="og:site_name" content="BigBetZone.online">
+  <meta property="og:title" content="Cookie Policy | BigBetZone.online">
+  <meta property="og:description" content="Breakdown of essential, analytics, and personalization cookies for the BigBetZone.online lounge.">
   <meta property="og:url" content="https://bigbetzone.online/cookie-policy/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://bigbetzone.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Cookie Policy | FortunePlay Fun">
+  <meta name="twitter:title" content="Cookie Policy | BigBetZone.online">
   <meta name="twitter:description" content="See what data stays on your device and how to reset it.">
   <meta name="twitter:image" content="https://bigbetzone.online/public/images/shareimage.webp">
 
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
@@ -47,7 +47,7 @@
         <div>
           <p class="pill">Privacy</p>
           <h1>Cookie & storage policy.</h1>
-          <p>We keep FortunePlay light: only essential cookies by default, with optional analytics if you opt in.</p>
+          <p>We keep BigBetZone.online light: only essential cookies by default, with optional analytics if you opt in.</p>
           <p style="color:var(--muted);">Last updated: November 2025</p>
         </div>
         <div class="hero__card">
@@ -104,13 +104,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>BigBetZone.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
