--- a/cookie-settings/index.html
+++ b/cookie-settings/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#f8cf5d">
-  <title>Cookie Settings | FortunePlay Fun</title>
-  <meta name="description" content="Control optional cookies and storage for FortunePlay Fun.">
+  <meta name="theme-color" content="#ff4da6">
+  <title>Cookie Settings | BigBetZone.online</title>
+  <meta name="description" content="Control optional cookies and storage for BigBetZone.online.">
   <link rel="canonical" href="https://bigbetzone.online/cookie-settings/">
-  <meta property="og:site_name" content="FortunePlay Fun">
-  <meta property="og:title" content="Cookie Settings | FortunePlay Fun">
+  <meta property="og:site_name" content="BigBetZone.online">
+  <meta property="og:title" content="Cookie Settings | BigBetZone.online">
   <meta property="og:description" content="Toggle analytics or personalization cookies whenever you like.">
   <meta property="og:url" content="https://bigbetzone.online/cookie-settings/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://bigbetzone.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Cookie Settings | FortunePlay Fun">
+  <meta name="twitter:title" content="Cookie Settings | BigBetZone.online">
   <meta name="twitter:description" content="Manage cookies and local storage manually.">
   <meta name="twitter:image" content="https://bigbetzone.online/public/images/shareimage.webp">
 
@@ -26,9 +26,9 @@
   <header class="site-header">
     <div class="shell header__inner">
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
@@ -47,7 +47,7 @@
         <div>
           <p class="pill">Preferences</p>
           <h1>Cookie settings.</h1>
-          <p>FortunePlay runs fine without optional cookies. Use this page to double-check what's stored locally.</p>
+          <p>BigBetZone.online runs fine without optional cookies. Use this page to double-check what's stored locally.</p>
         </div>
         <div class="hero__card">
           <h3>Current state</h3>
@@ -90,13 +90,13 @@
     <div class="shell footer__grid">
       <div>
 
-      <a class="brand" href="/" aria-label="FortunePlay Fun home">
-                <div class='brand__logo' role='img' aria-label='FortunePlay Fun textured logo'>
-          <span aria-hidden='true'>bigbetzone.online</span>
+      <a class="brand" href="/" aria-label="BigBetZone.online home">
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
+          <span aria-hidden='true'>BigBetZone.online</span>
         </div>
       </a>
 
-        <p>FortunePlay Fun keeps social casino nights calm, human, and quick to support.</p>
+        <p>BigBetZone.online keeps social casino nights calm, human, and quick to support.</p>
       </div>
       <div>
         <small>Explore</small>
