--- a/daily-bonus/index.html
+++ b/daily-bonus/index.html
@@ -6,16 +6,16 @@
     <meta name="theme-color" content="#ff8c5f">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <title>Daily Bonus | FortunePlay</title>
-  <meta name="description" content="Collect 1,000 coins every day and build streaks toward special keepsakes. The FortunePlay Daily Bonus is 100% virtual and always free.">
-  <meta property="og:site_name" content="FortunePlay">
-  <meta property="og:title" content="Daily Bonus | FortunePlay">
+  <title>Daily Bonus | BigBetZone.online</title>
+  <meta name="description" content="Collect 1,000 coins every day and build streaks toward special keepsakes. The BigBetZone.online Daily Bonus is 100% virtual and always free.">
+  <meta property="og:site_name" content="BigBetZone.online">
+  <meta property="og:title" content="Daily Bonus | BigBetZone.online">
   <meta property="og:description" content="Collect 1,000 coins daily and build streaks toward special keepsakes.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bigbetzone.online/daily-bonus/">
   <meta property="og:image" content="https://bigbetzone.online/public/images/shareimage.webp">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Daily Bonus | FortunePlay">
+  <meta name="twitter:title" content="Daily Bonus | BigBetZone.online">
   <meta name="twitter:description" content="Collect 1,000 coins daily and build streaks toward special keepsakes.">
   <meta name="twitter:image" content="https://bigbetzone.online/public/images/shareimage.webp">
   <link rel="canonical" href="https://bigbetzone.online/daily-bonus/">
@@ -28,10 +28,10 @@
     <div class="container header-inner">
       <a class="brand" href="/">
         <span class="brand-icon" aria-hidden="true">
-          <img src="/public/images/FortunePlay-icon.svg" alt="" role="presentation">
+          <img src="/public/images/BigBetZone.online-icon.svg" alt="" role="presentation">
         </span>
         <span class="brand-text">
-          <img src="/public/images/FortunePlay-wordmark.svg" alt="FortunePlay">
+          <img src="/public/images/BigBetZone.online-wordmark.svg" alt="BigBetZone.online">
         </span>
       </a>
       <nav class="site-nav" aria-label="Primary">
@@ -131,7 +131,7 @@
     <div class="container footer-grid">
       <div>
         <p class="footer-eyebrow">DIGIBOX LTD OOD</p>
-        <p class="footer-brand">FortunePlay</p>
+        <p class="footer-brand">BigBetZone.online</p>
         <p class="muted">
           A charming Irish social casino lounge where every rainbow ends in virtual gold. Earn daily clover drops,
           unlock collectible frames, and chase leaderboard glory-never for cash, always for the thrill.
@@ -174,7 +174,7 @@
     </div>
 
     <div class="container footer-bottom">
-      <p class="muted">© 2025 DIGIBOX LTD OOD · FortunePlay. All rights reserved.</p>
+      <p class="muted">© 2025 DIGIBOX LTD OOD · BigBetZone.online. All rights reserved.</p>
       <nav aria-label="Legal" class="legal-links">
         <a href="/terms/">Terms</a>
         <a href="/privacy/">Privacy</a>
