--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
     <section class="section section--contrast" id="origin">
 
-      <div class="shell grid-split">
+      <div class="shell origin-layout">
 
-        <div>
+        <div class="origin-story">
 
           <p class="pill">Origin story</p>
 
@@ -125,77 +125,83 @@
 
           <p>That founding momentum still bubbles up during updates: handwritten welcome notes, playlist swaps, and debrief calls where we listen more than we pitch.</p>
 
-          <div class="feature-card" style="margin-top:1.5rem;">
+          <div class="phase-timeline" aria-label="Build phases">
 
-            <h3>The studio phase</h3>
+            <article class="phase-card">
+              <p class="phase-card__tag">Phase 01</p>
+              <h3>The studio lab</h3>
+              <p>We blacked out a borrowed warehouse, taped neon gels over thrifted lamps, and read product copy out loud until it sounded like something we'd say to friends. From that night on, every interface decision felt like stage direction.</p>
+              <ul class="phase-card__list">
+                <li>Moodboards from that room turned into the lighting presets and pacing cues baked into our releases.</li>
+                <li>We ran contrast and screen-reader passes in the same breath as color tweaks, so no feature launched without both.</li>
+              </ul>
+            </article>
 
-            <p>We hung track lights inside a miniature warehouse, treated walls like gallery rails, and tuned glow levels until the room whispered. That practice taught us to treat digital rooms like boutique lounges where lighting, copy, and pacing all matter.</p>
+            <article class="phase-card">
+              <p class="phase-card__tag">Phase 02</p>
+              <h3>The community circuit</h3>
+              <p>Weekly open lounges turned into rotating residencies where members swapped playlists, mini zines, and gentle dares that later became quests and profile frames.</p>
+              <ul class="phase-card__list">
+                <li>We logged every co-created ritual, named it, and folded it into today’s badge and glow system.</li>
+                <li>Feedback circles chased phrases like “this feels safe” instead of growth charts, and we shipped based on that pulse.</li>
+              </ul>
+            </article>
 
-            <p>Friends swung by with snacks, played QA host, and called out sharp fonts or nagging CTAs. Those critiques shaped the calm shell you see today.</p>
-
-          </div>
-
-          <div class="feature-card" style="margin-top:1.5rem;">
-
-            <h3>The community phase</h3>
-
-            <p>Open studio nights slowly became weekly hangs that felt like mellow club residencies. We passed around instant photos, zines for song requests, and analog badges that inspired today's frames.</p>
-
-            <p>Hearing someone say "this lounge feels safer than my favorite bar" was the nudge that kept us iterating.</p>
-
-          </div>
-
-          <div class="feature-card" style="margin-top:1.5rem;">
-
-            <h3>The hosting phase</h3>
-
-            <p>As attendance climbed we trained moderators like concierge hosts&mdash;attentive, grounded, never loud. We rehearse greetings, resets, and exit rituals so every interaction feels deliberate.</p>
-
-            <p>Those playbooks now inform every email, playlist drop, and responsible-play check-in across BigBetZone.online.</p>
+            <article class="phase-card">
+              <p class="phase-card__tag">Phase 03</p>
+              <h3>The hosting shift</h3>
+              <p>Moderators became concierge-style hosts who rehearse greetings, pacing resets, and sign-offs the way a band rehearses an encore. That routine keeps rooms warm instead of loud.</p>
+              <ul class="phase-card__list">
+                <li>Hosting scripts now bake in breath cues, hydration prompts, and multilingual handoffs.</li>
+                <li>Those playbooks steer every playlist drop, DM, and responsible-play check-in across BigBetZone.online.</li>
+              </ul>
+            </article>
 
           </div>
 
         </div>
 
-        <div class="feature-card">
+        <aside class="spark-panel" aria-labelledby="spark-title">
 
-          <h3>The spark</h3>
+          <p class="spark-panel__badge">Night zero</p>
+          <h3 id="spark-title">BigBet glow</h3>
+          <p class="spark-panel__intro">Rain pounded Portland, so we borrowed a studio, strung magenta tape lights above thrifted laptops, and whispered host scripts between lofi loops. Eight friends showed up, stayed through three playlists, and started calling the pop-up a neon boardwalk.</p>
 
-          <p>One soaked Portland weekend we assembled the first prototype: teal fog, softened reels, and moderators speaking at library volume. Eight friends lingered for hours, so we widened the door.</p>
+          <div class="spark-panel__stats" role="list">
+            <div class="spark-panel__stat" role="listitem">
+              <small>Players</small>
+              <strong>8 originals</strong>
+            </div>
+            <div class="spark-panel__stat" role="listitem">
+              <small>Gear</small>
+              <strong>3 thrifted laptops</strong>
+            </div>
+            <div class="spark-panel__stat" role="listitem">
+              <small>Soundtrack</small>
+              <strong>4 mixtapes</strong>
+            </div>
+          </div>
 
-          <p>Those early sessions ran on reclaimed laptops and paper rulebooks. It sounded impossible, yet the room felt safe and the story circulated like a prized mixtape.</p>
+          <div class="spark-panel__grid">
+            <div>
+              <h4>What we built</h4>
+              <p>A hush-level slot lane with ambient scents, analog scorecards, and chat prompts we pulled from typewritten cards.</p>
+            </div>
+            <div>
+              <h4>What stayed</h4>
+              <p>Zero-cash rituals, human hosts on comms, and pauses highlighted like headlines so nobody had to chase a breather.</p>
+            </div>
+          </div>
 
-          <ul class="checklist" aria-label="Principles that still guide us">
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>No cash-outs, ever. We celebrate streaks without tying them to spend.</span>
-
-            </li>
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>Interfaces stay legible on humble hardware so a thrift-store laptop can keep up.</span>
-
-            </li>
-
-            <li>
-
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
-
-              <span>Humans run moderation, support, and responsible-play replies&mdash;no scripts, just people.</span>
-
-            </li>
-
+          <ul class="spark-panel__list">
+            <li>Cash never hits the table; streaks earn shout-outs, not deposits.</li>
+            <li>Layouts have to read clearly on recycled hardware with spotty Wi-Fi.</li>
+            <li>Moderation, support, and responsible play stay fully human and conversational.</li>
           </ul>
 
-          <p>We still raise a toast to those original eight players whenever a new room opens. They proved BigBetZone.online could stay generous, transparent, and real.</p>
+          <p class="spark-panel__footer">We still raise a toast to those eight players whenever a new room opens. Their rainy-night patience proved BigBetZone.online could glow brighter without cranking the volume.</p>
 
-        </div>
+        </aside>
 
       </div>
 
