--- a/responsible-play/index.html
+++ b/responsible-play/index.html
@@ -27,8 +27,9 @@
     <div class="shell header__inner">
 
       <a class="brand" href="/" aria-label="BigBetZone.online home">
-                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
-          <span aria-hidden='true'>BigBetZone.online</span>
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online neon logotype'>
+          <span class='brand__word' aria-hidden='true'>BigBetZone</span>
+          <span class='brand__domain' aria-hidden='true'>.online</span>
         </div>
       </a>
 
@@ -104,8 +105,9 @@
       <div>
 
       <a class="brand" href="/" aria-label="BigBetZone.online home">
-                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
-          <span aria-hidden='true'>BigBetZone.online</span>
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online neon logotype'>
+          <span class='brand__word' aria-hidden='true'>BigBetZone</span>
+          <span class='brand__domain' aria-hidden='true'>.online</span>
         </div>
       </a>
 
