--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
   <header class="site-header">
     <div class="shell header__inner">
       <a class="brand" href="/" aria-label="BigBetZone.online home">
-                <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
-          <span aria-hidden='true'>BigBetZone.online</span>
+                <div class='brand__logo' role='img' aria-label='BigBetZone.online neon logotype'>
+          <span class='brand__word' aria-hidden='true'>BigBetZone</span>
+          <span class='brand__domain' aria-hidden='true'>.online</span>
         </div>
       </a>
 
@@ -595,8 +596,9 @@
     <div class="shell footer__grid">
       <div>
         <a class="brand" href="/" aria-label="BigBetZone.online home">
-                  <div class='brand__logo' role='img' aria-label='BigBetZone.online textured logo'>
-          <span aria-hidden='true'>BigBetZone.online</span>
+                  <div class='brand__logo' role='img' aria-label='BigBetZone.online neon logotype'>
+          <span class='brand__word' aria-hidden='true'>BigBetZone</span>
+          <span class='brand__domain' aria-hidden='true'>.online</span>
         </div>
         </a>
         <p>BigBetZone.online keeps social casino nights calm, human, and quick to support.</p>
