--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
           <p class="pill">Origin story</p>
 
-          <h2>Hows it the BigBetZone.online boardwalk took shape.</h2>
+          <h2>How the BigBetZone.online boardwalk took shape.</h2>
 
           <p>BigBetZone.online was sketched by session hosts, playlist curators, and accessibility nerds who were tired of casino apps that barked orders. We pictured a neon promenade where rituals outrank rake and conversations float between mindful spins.</p>
 
