--- a/daily-bonus/index.html
+++ b/daily-bonus/index.html
@@ -21,6 +21,10 @@
   <link rel="stylesheet" href="/styles.css?v=2">
 </head>
 <body>
+  <div class="compliance-banner" role="status">
+    <strong>Social Casino Notice:</strong> Play is free entertainment only. No real money gambling, payouts, or prizes. 18+.
+  </div>
+
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <div class="container header-inner">
