--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <link rel="stylesheet" href="/styles.css?v=3">
 </head>
 <body>
+  <div class="compliance-banner" role="status">
+    <strong>Social Casino Notice:</strong> Play is free entertainment only. No real money gambling, payouts, or prizes. 18+.
+  </div>
+
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header">
     <div class="shell header__inner">
