--- a/index.html
+++ b/index.html
@@ -469,6 +469,31 @@
 
     </section>
 
+    <section class="section section--game" id="rise-of-orpheus">
+      <div class="shell featured-game">
+        <div class="featured-game__copy">
+          <p class="pill">Spotlight game</p>
+          <h2>Rise of Orpheus</h2>
+          <p>Slip into a mythic reel set wrapped in neon strings and harp swells. Rise of Orpheus streams directly inside BigBetZone.online as a free-to-play social casino experience&mdash;no extra pages, no cash play, just story-driven spins.</p>
+          <ul class="featured-game__list">
+            <li>Ambient soundtrack that reacts to your streaks.</li>
+            <li>Built-in practice mode with zero deposits or payouts.</li>
+            <li>Optimized for desktop and tablet without fullscreen prompts.</li>
+          </ul>
+        </div>
+        <div class="featured-game__frame" aria-label="Rise of Orpheus social slot preview">
+          <iframe
+            src="https://released.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2"
+            title="Rise of Orpheus social slot preview"
+            loading="lazy"
+            sandbox="allow-scripts allow-same-origin allow-popups"
+            allow="autoplay"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </section>
+
     <section class="section" id="community">
 
       <div class="shell">
