--- a/index.html
+++ b/index.html
@@ -483,12 +483,11 @@
         </div>
         <div class="featured-game__frame" aria-label="Rise of Orpheus social slot preview">
           <iframe
-            src="https://released.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2"
+            src="https://released.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2&amp;refresh=1758626839905"
             title="Rise of Orpheus social slot preview"
             loading="lazy"
-            sandbox="allow-scripts allow-same-origin allow-popups"
-            allow="autoplay"
-            referrerpolicy="no-referrer-when-downgrade">
+            referrerpolicy="no-referrer"
+            allow="autoplay">
           </iframe>
         </div>
       </div>
